--- a/index.html
+++ b/index.html
@@ -1,7 +1,65 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <title>Hosted Assignment List Page</title>
+        <style>
+            th, td{
+                text-align: center;
+                padding: 20px;
+            }
+            table{
+                width: 80%;
+                margin: auto;
+            }
+        </style>
+    </head>
+    <body>
+        <table border="2px">
+            <tr>
+                <th>Title</th>
+                <th>Demo</th>
+                <th>Code</th>
+            </tr>
+            <tr>
+                <td><strong>FaceFilter(Final Project)</strong></td>
+                <td><a href="#">FaceFilter-DEMO</a></td>
+                <td><a href="#">FaceFilter-CODE</a></td>
+            </tr>
+            <tr>
+                <td>My Bio</td>
+                <td><a href="#">MyBio-DEMO</a></td>
+                <td><a href="#">MyBio-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Ball Bounce</td>
+                <td><a href="#">BallBounce-DEMO</a></td>
+                <td><a href="#">BallBounce-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Carousel</td>
+                <td><a href="#">Carousel-DEMO</a></td>
+                <td><a href="#">Carousel-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Multi-carousel</td>
+                <td><a href="#">multicarousel-DEMO</a></td>
+                <td><a href="#">multicarousel-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Box Collision</td>
+                <td><a href="#">BoxCollision-DEMO</a></td>
+                <td><a href="#">BoxCollision-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Ant Smasher</td>
+                <td><a href="#">AntSmasher-DEMO</a></td>
+                <td><a href="#">AntSmasher-CODE</a></td>
+            </tr>
+            <tr>
+                <td>Car Game</td>
+                <td><a href="#">CarGame-DEMO</a></td>
+                <td><a href="#">CarGame-CODE</a></td>
+            </tr>
+        </table>
+    </body>
 </html>
