assignment : Design Assignment 1 1A-home-search.jpg edit1

--- a/Design Assignment 1 1A-home-search.jpg/index.html
+++ b/Design Assignment 1 1A-home-search.jpg/index.html
@@ -50,7 +50,10 @@
             </div>
             <div class="main">
                 <div class="main-body">
-
+                    <div class="body-content">
+                        <h1>Donec faucibus ultricies congue</h1>
+                        <p class="details">Maecenas eget turpis. Nunc vel metus augue. Aenean euismod cursus ligula eget dapibus. Praesent vel erat in tortor placerat dignissim. Duls dap bus alicuam mi, eget euismod sem scelerisque ut.Vlvamus at alit quis urna adipiscing laculls. Curabitur vitae velit in neque dictum blandit. Proin in laculls neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    </div>
                 </div>
             </div>
             <div class="footer">
@@ -59,7 +62,7 @@
                 </div>
                 <div class="footer-main"></div>
                 <div class="footer-bottom">
-                    <div class="footer-bottom-left"></div>
+                    <div class="footer-bottom-left">2013 Tollens</div>
                     <div class="footer-bottom-right">
                         <ul>
                             <li><img src="images/fb-logo.png" alt=""></li>
