--- a/Design _Assignment_1_1A-home-search.jpg/index.html
+++ b/Design _Assignment_1_1A-home-search.jpg/index.html
@@ -51,8 +51,27 @@
             <div class="main">
                 <div class="main-body">
                     <div class="body-content">
-                        <h1>Donec faucibus ultricies congue</h1>
-                        <p class="details">Maecenas eget turpis. Nunc vel metus augue. Aenean euismod cursus ligula eget dapibus. Praesent vel erat in tortor placerat dignissim. Duls dap bus alicuam mi, eget euismod sem scelerisque ut.Vlvamus at alit quis urna adipiscing laculls. Curabitur vitae velit in neque dictum blandit. Proin in laculls neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        <div class="body-content-info">
+                            <h1>Donec faucibus ultricies congue</h1><br>
+                            <p class="details">Maecenas eget turpis. Nunc vel metus augue. Aenean euismod cursus ligula eget dapibus. Praesent vel erat in tortor placerat dignissim. Duls dap bus alicuam mi, eget euismod sem scelerisque ut.Vlvamus at alit quis urna adipiscing laculls. Curabitur vitae velit in neque dictum blandit. Proin in laculls neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                        </div>    
+                    </div>
+                    <div class="col3-left">
+                        <div class="col3-left-header">Why Choose Us?</div>
+                        <div class="col3-left-list">
+                            <ul>
+                                <li>Quisue at massa ipsum</li>
+                                <li>Maecenas a lorem augue, egestas</li>
+                                <li>Cras vitae gelis at lacus eleifend</li>
+                                <li>Etiam auctor diam pellentesque</li>
+                                <li>Nulla ac mass at dolor</li>
+                                <li>Condimentum eleifend vitae vitae</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-right">
+                        <div class="col-r-left"></div>
+                        <div class="col-r-right"></div>
                     </div>
                 </div>
             </div>
