--- a/index.html
+++ b/index.html
@@ -21,44 +21,9 @@
                 <th>Code</th>
             </tr>
             <tr>
-                <td><strong>FaceFilter(Final Project)</strong></td>
-                <td><a href="#">FaceFilter-DEMO</a></td>
-                <td><a href="#">FaceFilter-CODE</a></td>
-            </tr>
-            <tr>
-                <td>My Bio</td>
-                <td><a href="#">MyBio-DEMO</a></td>
-                <td><a href="#">MyBio-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Ball Bounce</td>
-                <td><a href="#">BallBounce-DEMO</a></td>
-                <td><a href="#">BallBounce-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Carousel</td>
-                <td><a href="#">Carousel-DEMO</a></td>
-                <td><a href="#">Carousel-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Multi-carousel</td>
-                <td><a href="#">multicarousel-DEMO</a></td>
-                <td><a href="#">multicarousel-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Box Collision</td>
-                <td><a href="#">BoxCollision-DEMO</a></td>
-                <td><a href="#">BoxCollision-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Ant Smasher</td>
-                <td><a href="#">AntSmasher-DEMO</a></td>
-                <td><a href="#">AntSmasher-CODE</a></td>
-            </tr>
-            <tr>
-                <td>Car Game</td>
-                <td><a href="#">CarGame-DEMO</a></td>
-                <td><a href="#">CarGame-CODE</a></td>
+                <td><strong>Design_Assignment_1_1A-home-search</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-CODE</a></td>
             </tr>
         </table>
     </body>
