static webpage push1

--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -1,3 +1,132 @@
 <html>
-    
+    <head>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+        <!--[if lt IE 9]>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <![endif]-->
+        <!--[if lte IE 8]>
+            <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada&display=swap" rel="stylesheet">
+        <![endif]-->
+    </head>
+    <body>
+        <div class="wrapper">
+            <header>
+                <div class="header-wrapper">
+                    <div class="header-top">
+                        <div class="header-motto">
+                        <h2>PANDORA</h2>
+                        <p>fantastic products & great prices</p>
+                        </div>
+                        <div class="cart-menu">
+                            <ul>
+                                <li><img class="cart-img" src="images/cart_img.png" alt=""><span>0</span> items ($<span>0.00</span> in total)</li>
+                                <li><img src="images/cart-pipelie.png" alt=""></li>
+                                <li><a href="#">Checkout</a></li>
+                                <li><img src="images/cart-pipelie.png" alt=""></li>
+                                <li><img class="cart-img" src="images/cart-user-img.png" alt=""><a href="#">My account</a></li>
+                                <li><img src="images/cart-up-arrow.png" alt=""></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="line-separator"></div>
+                    <div class="login">
+                        <form action="#">
+                        <span>Log-in:</span><input class="input-email" type="email" placeholder="E-mail address" name="email">
+                        <div class="password-and-forget">
+                            <input class="password" type="password" placeholder="Password" name="password">
+                            <a href="#">Forget?</a>
+                        </div>
+                        <input class="submit" type="submit" value="Log-in">
+                        <button>Continue as guest</button>
+                    </form>
+                    </div>
+                    <div class="line-separator"></div>
+                    <nav>
+                        <ul>
+                            <li>Home</li>
+                            <li>Women +</li>
+                            <li>Men +</li>
+                            <li>Blog</li>
+                            <li>Contact & info</li>
+                            <li>Features</li>
+                        </ul>
+                        <div class="searchbar">
+                            <form action="#">
+                                <div class="searchbar-inner">
+                                        <img src="images/search-img.png" alt="">
+                                        <input type="text" placeholder="search here">
+                                </div>
+                            </form>
+                        </div>
+                    </nav>
+                </div>    
+            </header>
+            <section class="banner-section">
+                <div class="banner">
+
+                </div>
+            </section>
+            <main>
+
+            </main>
+            <footer>
+                <div class="footer-wrapper">
+                    <div class="footer-content">
+                        <div class="footer-navigation">
+                            <h2>Navigation</h2>
+                            <div class="footer-content-line"></div>
+                            <div class="footer-navigation-list">
+                                <ul>
+                                    <li>Homepage</li>
+                                    <li>Women</li>
+                                    <li>Featured items</li>
+                                    <li>News blog</li>
+                                    <li>Features</li>
+                                    <li>Contact & info</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="footer-latest-tweets">
+                            <h2>Latest tweets</h2>
+                            <div class="footer-content-line"></div>
+                            <div class="footer-twitter-list">
+                                <ul>
+                                    <div class="latest-tweets-padding">
+                                    <li>
+                                        <img src="/images/twitter-logo.png" alt="">
+                                        <p><span>@crasnon</span> sem in felis consequat curss vitae cerat. Ut purus ipsum, laoreet at iaculis non <span><a href="#">http://t.co/yn0nTSIA</a></span></p>
+                                    </li>
+                                     </div>
+                                     <div class="latest-tweets-padding">
+                                    <li>
+                                        <img src="images/twitter-logo.png" alt="">
+                                        <p>
+                                                Quisque fringilla, enim volutpat commodo eros faucibus massa, desed <span>#ganymede</span> pellentesque
+                                        </p>
+                                    </li>
+                                    </div>
+                                    <div class="latest-tweets-padding">
+                                    <li>
+                                        <img src="images/twitter-logo.png" alt="">
+                                        <p>
+                                                Fusce nec massa eget purus imperdiet commodo. Quisque non lorem eros.   
+                                        </p>                 
+                                    </li>
+                                    </div>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="footer-newsletter"></div>
+                        <div class="footer-aboutus"></div>
+                    </div>
+                    <div class="footer-separator-line"></div>
+                    <div class="footer-copyright"></div>
+                </div>
+            </footer>
+        </div>
+    </body>
 </html>
