Desin Project Static edit2

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-CODE</a></td>
             </tr>
+	    <tr>
+                <td><strong>Design_Final_Project_Static</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Final_Project_Static/">Design_Final_Project_Static-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Final_Project_Static">Design_Final_Project_Static-CODE</a></td>
+            </tr>
+		
         </table>
     </body>
 </html>
