--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -120,7 +120,17 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="footer-newsletter"></div>
+                        <div class="footer-newsletter">
+                            <h2>Newsletter</h2>
+                            <div class="footer-content-line"></div>
+                            <p>To suscribe to our newsletter type in your e-mail address below and press "Enter". <strong>We don't send spam. Ever!</strong></p>
+                            <div class="newsletter-search">
+                                <div class="newsletter-image"></div>
+                                <div class="newsletter-searchform">
+                                    <input type="text" name="newsletter-search" placeholder="search here">
+                                </div>
+                            </div>
+                        </div>
                         <div class="footer-aboutus"></div>
                     </div>
                     <div class="footer-separator-line"></div>
