design final project edit3

--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -123,15 +123,39 @@
                         <div class="footer-newsletter">
                             <h2>Newsletter</h2>
                             <div class="footer-content-line"></div>
-                            <p>To suscribe to our newsletter type in your e-mail address below and press "Enter". <strong>We don't send spam. Ever!</strong></p>
+                            <p>To suscribe to our newsletter type in your e-mail address below and press "Enter".<br><strong>We don't send spam. Ever!</strong></p>
                             <div class="newsletter-search">
-                                <div class="newsletter-image"></div>
+                                <div class="newsletter-image"><img src="images/newsletter-logo.png" alt=""></div>
                                 <div class="newsletter-searchform">
                                     <input type="text" name="newsletter-search" placeholder="search here">
                                 </div>
                             </div>
                         </div>
-                        <div class="footer-aboutus"></div>
+                        <div class="footer-aboutus">
+                            <h2>About us</h2>
+                            <div class="footer-content-line"></div>
+                            <p>Mecenas neque est, feugiatquis porta in, condimentum  eget arcu. Fringilla aliquam ultricies.</p>
+                            <div class="aboutus-social-media">
+                                <ul>
+                                    <li><a href="#"><img src="images/youtube-logo.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/fb-logo.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/twitter-logo-bw.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-img4.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-img5.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-img6.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                            <div class="payment">
+                                <ul>
+                                    <li><a href="#"><img src="images/aboutus-p-img1.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-p-img2.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-p-img3.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-p-img4.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-p-img5.png" alt=""></a></li>
+                                    <li><a href="#"><img src="images/aboutus-p-img6.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <div class="footer-separator-line"></div>
                     <div class="footer-copyright"></div>
