--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -1,5 +1,6 @@
-<html>
+<!DOCTYPE html>
     <head>
+        <title>Design Final Project Static</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/style.css">
@@ -13,6 +14,7 @@
         <![endif]-->
     </head>
     <body>
+        <div class="outerwrapper">
         <div class="wrapper">
             <header>
                 <div class="header-wrapper">
@@ -35,14 +37,14 @@
                     <div class="line-separator"></div>
                     <div class="login">
                         <form action="#">
-                        <span>Log-in:</span><input class="input-email" type="email" placeholder="E-mail address" name="email">
-                        <div class="password-and-forget">
-                            <input class="password" type="password" placeholder="Password" name="password">
-                            <a href="#">Forget?</a>
-                        </div>
-                        <input class="submit" type="submit" value="Log-in">
-                        <button>Continue as guest</button>
-                    </form>
+                            <span>Log-in:</span><input class="input-email" type="email" placeholder="E-mail address" name="email">
+                            <div class="password-and-forget">
+                                <input class="password" type="password" placeholder="Password" name="password">
+                                <a href="#">Forget?</a>
+                            </div>
+                            <input class="submit" type="submit" value="Log-in">
+                            <button>Continue as guest</button>
+                        </form>
                     </div>
                     <div class="line-separator"></div>
                     <nav>
@@ -67,11 +69,39 @@
             </header>
             <section class="banner-section">
                 <div class="banner">
-
+                    <div class="banner-header">
+                        Lorem ipsum dolor sitamet consectetur
+                    </div>
+                    <div class="banner-para">Vivamus fermentum dictum rhoncus. Ut molestie vehicula ipsum sed sagittis. Aenean euismod odio ac risus vulputate ultricies. Nam tincidunt ornare turpis, sit amet mattis. <a href="#"><strong>Read more +</strong></a></div>
+                    <div class="slider-buttons">
+                        <div class="slider-button-wrapper slider-button-wrapper1">
+                            <div class="slider-button1 slider-button">1</div>
+                        </div>
+                        <div class="slider-button-wrapper slider-button-wrapper2">
+                            <div class="slider-button2 slider-button">2</div>
+                        </div>
+                        <div class="slider-button-wrapper slider-button-wrapper3">
+                            <div class="slider-button3 slider-button">3</div>
+                        </div>
+                        <div class="slider-button-wrapper slider-button-wrapper4">
+                            <div class="slider-button4 slider-button">4</div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <main>
-
+                <div class="below-banner">
+                    <div class="laptop-tablet-image">
+                        <img src="images/desktop-tablet-pic.png" alt="">
+                    </div>
+                    <div class="below-banner-info">
+                        <p class="below-banner-header">Welcome to <span>PANDORA,</span> responsive Shopify theme</p>
+                        <p class="below-banner-details">
+                                <span>Congratulations on starting your own e-commerce store!</span> 
+                                GANYMEDE is an elegant & responsive Shopify theme which dynamically adjusts for all screen sizes and devices. Your shop will look great and will be easy to use on desktops, laptops, tablets and mobile smartphones.
+                        </p>
+                    </div>
+                </div>
             </main>
             <footer>
                 <div class="footer-wrapper">
@@ -162,5 +192,6 @@
                 </div>
             </footer>
         </div>
+    </div>
     </body>
 </html>
