--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -102,6 +102,60 @@
                         </p>
                     </div>
                 </div>
+                <div class="featured-items">
+                    <div class="featured-items-header">
+                        <h2>Featured items</h2>
+                        <p><img src="images/view-more-eye.png">view more items</p>
+                    </div>
+                    <div class="line-separator"></div>
+                    <div class="featured-items-list">
+                        <div class="layer1">
+                        <div class="featured-item1">
+                            <span class="featured-item-span1">Striped colorful dress</span>
+                            <span class="featured-item-span2">$29.99</span>
+                        </div>
+                        <div class="featured-item2">
+                            <span class="featured-item-span1">Striped colorful dress</span>
+                            <span class="featured-item-span2">$29.99</span>
+                        </div>
+                        <div class="featured-item3">
+                            <span class="featured-item-span1">Striped colorful dress</span>
+                            <span class="featured-item-span2">$29.99</span>
+                        </div>
+                        <div class="featured-item4">
+                            <span class="featured-item-span1">Striped colorful dress</span>
+                            <span class="featured-item-span2">$29.99</span>
+                        </div>
+                        </div>
+                        <div class="level2">
+                            <div class="featured-item5">
+                                <span class="featured-item-span1">Striped colorful dress</span>
+                                <span class="featured-item-span2">$29.99</span>
+                            </div>
+                            <div class="featured-item6">
+                                <span class="featured-item-span1">Striped colorful dress</span>
+                                <span class="featured-item-span2">$29.99</span>
+                            </div>
+                            <div class="featured-item7">
+                                <span class="featured-item-span1">Striped colorful dress</span>
+                                <span class="featured-item-span2">$29.99</span>
+                            </div>
+                            <div class="featured-item8">
+                                <span class="featured-item-span1">Striped colorful dress</span>
+                                <span class="featured-item-span2">$29.99</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="special-offers">
+                    <h2>Special offers</h2>
+                    <div class="line-separator"></div>
+                    <div class="special-offers-image">
+                        <img class="special-offers-image1" src="images/sale-image.png" alt="">
+                        <img class="special-offers-image2" src="images/50percentoff-image.png" alt="">
+                        <img src="images/new-image.png" alt="">
+                    </div>
+                </div>
             </main>
             <footer>
                 <div class="footer-wrapper">
