desigin final project static edit submission

--- a/Design_Final_Project_Static/index.html
+++ b/Design_Final_Project_Static/index.html
@@ -105,7 +105,7 @@
                 <div class="featured-items">
                     <div class="featured-items-header">
                         <h2>Featured items</h2>
-                        <p><img src="images/view-more-eye.png">view more items</p>
+                        <p><img src="images/view-more-eye.png" alt="">view more items</p>
                     </div>
                     <div class="line-separator"></div>
                     <div class="featured-items-list">
@@ -154,6 +154,73 @@
                         <img class="special-offers-image1" src="images/sale-image.png" alt="">
                         <img class="special-offers-image2" src="images/50percentoff-image.png" alt="">
                         <img src="images/new-image.png" alt="">
+                    </div>
+                </div>
+                <div class="blog-seller-about">
+                    <div class="latest-news-blog">
+                        <h2>Latest from news blog</h2>
+                        <div class="line-separator1"></div>
+                        <div class="latest-from-blog-content">
+                            <p>Praesent feugiat felis congue nulla dapibus</p>
+                            <ul>
+                                <li><img src="images/clock-logo.png" alt=""><span>May 23, 2012</span></li>
+                                <li><img src="images/cart-pipelie.png" alt=""></li>
+                                <li><img src="images/comment-logo.png" alt=""><span>6</span></li>
+                            </ul>
+                            <p class="latest-blog-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae nibh risus. Morbi dapibus lectus at erat viverra malesuada. Phasellus congue nulla eu turpis.accumsan.  <a href="#">Read more +</a></p>
+                        </div>
+                        <div class="line-separator1"></div>
+                        <div class="latest-from-blog-content">
+                                <p>Praesent feugiat felis congue nulla dapibus</p>
+                                <ul>
+                                    <li><img src="images/clock-logo.png" alt=""><span>May 23, 2012</span></li>
+                                    <li><img src="images/cart-pipelie.png" alt=""></li>
+                                    <li><img src="images/comment-logo.png" alt=""><span>6</span></li>
+                                </ul>
+                                <p class="latest-blog-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae nibh risus. Morbi dapibus lectus at erat viverra malesuada. Phasellus congue nulla eu turpis.accumsan.  <a href="#">Read more +</a></p>
+                        </div>
+                        <div class="line-separator1"></div>
+                        <div class="latest-from-blog-content">
+                                <p>Praesent feugiat felis congue nulla dapibus</p>
+                                <ul>
+                                    <li><img src="images/clock-logo.png" alt=""><span>May 23, 2012</span></li>
+                                    <li><img src="images/cart-pipelie.png" alt=""></li>
+                                    <li><img src="images/comment-logo.png" alt=""><span>6</span></li>
+                                </ul>
+                                <p class="latest-blog-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vitae nibh risus. Morbi dapibus lectus at erat viverra malesuada. Phasellus congue nulla eu turpis.accumsan.  <a href="#">Read more +</a></p>
+                            </div>
+                    </div>
+                    <div class="best-sellers">
+                        <h2>Best-sellers</h2>
+                        <div class="line-separator1"></div>
+                        <div class="best-sellers-images">
+                            <div class="best-sellers-level1">
+                                <div class="best-seller1">
+                                    <img src="images/best-seller1.png" alt="">
+                                </div>
+                                <div class="best-seller2">
+                                    <img src="images/best-seller2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="best-sellers-level2">
+                                <div class="best-seller3">
+                                    <img src="images/best-seller3.png" alt="">
+                                </div>
+                                <div class="best-seller4">
+                                    <img src="images/best-seller4.png" alt="">
+                                </div>
+                            </div>                            
+                        </div>
+                    </div>
+                    <div class="about-and-contacts">
+                        <h2>About & Contacts</h2>
+                        <div class="line-separator1"></div>
+                        <div class="about-and-contacts-content">
+                            <p>Mecenas quis porta in, condimentum  eget arcu. Fringilla aliquam ultricies pellente sque vel turpis nec leo tincidunt sollicitudin ac non risus. Ves tibu lum ultrices feugiat velit, quis tincidunt velit volutpat nec. Vivamus pharetra fringilla augue, elementum ante ultrices tincidunt. Aenean consequat tincidunt.</p>
+                            <p class="second-child">Quisque scelerisque augue eu turpis condimentum iaculis. Cras adipiscing lobortis convallis. Nam eu augue lorem.</p>
+                            <div class="phone-number"><img src="images/phone-logo.png" alt="">7-685-531-2605</div>
+                            <div class="email"><img src="images/mail-icon.png" alt="">info@planetshine.net</div>
+                        </div>
                     </div>
                 </div>
             </main>
