--- a/JS-PROJECTS/ast1/index.html
+++ b/JS-PROJECTS/ast1/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Slider</title>
-	<link rel="stylesheet" href="slider.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 			<div class="dot" id="dot3"></div>
 		</div>
 	</div>
-	<script src="slider.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
