--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-CODE</a></td>
             </tr>
-	    <tr>
+	        <tr>
                 <td><strong>Design_Final_Project_Static</strong></td>
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Final_Project_Static/">Design_Final_Project_Static-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Final_Project_Static">Design_Final_Project_Static-CODE</a></td>
+            </tr>
+            tr>
+                <td><strong>JS_Assignment_1_Image_Slider</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast1/">JS_Assignment_1_Image_Slider-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast1">JS_Assignment_1_Image_Slider-CODE</a></td>
             </tr>
 		
         </table>
