index updated with assignment box collision

--- a/index.html
+++ b/index.html
@@ -21,19 +21,24 @@
                 <th>Code</th>
             </tr>
             <tr>
-                <td><strong>Design_Assignment_1_1A-home-search</strong></td>
+                <td><strong>Design Assignment 1: 1A-home-search.jpg</strong></td>
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Assignment_1_1A-home-search">Design Assignment 1: 1A-home-search.jpg-CODE</a></td>
             </tr>
 	        <tr>
-                <td><strong>Design_Final_Project_Static</strong></td>
-                <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Final_Project_Static/">Design_Final_Project_Static-DEMO</a></td>
-                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Final_Project_Static">Design_Final_Project_Static-CODE</a></td>
+                <td><strong>Design Final Project: Static</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/Design_Final_Project_Static/">Design Final Project: Static-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/Design_Final_Project_Static">Design Final Project: Static-CODE</a></td>
             </tr>
             <tr>
-                <td><strong>JS_Assignment_1_Image_Slider</strong></td>
-                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast1/">JS_Assignment_1_Image_Slider-DEMO</a></td>
-                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast1">JS_Assignment_1_Image_Slider-CODE</a></td>
+                <td><strong>JS Assignment 1: Image Slider</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast1/">JS Assignment 1: Image Slider-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast1">JS Assignment 1: Image Slider-CODE</a></td>
+            </tr>
+            <tr>
+                <td><strong>JS Assignment 3: Box Collision and Ant Smasher</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast3/">JS Assignment 3: Box Collision and Ant Smasher-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast3">JS Assignment 3: Box Collision and Ant Smasher-CODE</a></td>
             </tr>
         </table>
     </body>
