--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast3/">JS Assignment 3: Box Collision and Ant Smasher-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast3">JS Assignment 3: Box Collision and Ant Smasher-CODE</a></td>
             </tr>
+            <tr>
+                <td><strong>JS Assignment 4: Car Lane Game with Bullet Implementation</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast4/">JS Assignment 4: Car Lane Game with Bullet Implementation-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast4">JS Assignment 4: Car Lane Game with Bullet Implementation-CODE</a></td>
+            </tr>
         </table>
     </body>
 </html>
