--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                 <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-PROJECTS/ast4/">JS Assignment 4: Car Lane Game with Bullet Implementation-DEMO</a></td>
                 <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-PROJECTS/ast4">JS Assignment 4: Car Lane Game with Bullet Implementation-CODE</a></td>
             </tr>
+            <tr>
+                <td><strong>JS FINAL PROJECT</strong></td>
+                <td><a href="https://ashimrajbhandari.github.io/leapfrog/JS-FINAL-PROJECT/">JS FINAL PROJECT-DEMO</a></td>
+                <td><a href="https://github.com/ashimrajbhandari/leapfrog/tree/master/JS-FINAL-PROJECT">JS FINAL PROJECT-CODE</a></td>
+            </tr>
         </table>
     </body>
 </html>
