--- a/JS-FINAL-PROJECT/index.html
+++ b/JS-FINAL-PROJECT/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Javascript Utility Library</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+  <header>
+    <h1 id="main-header"><span>Wimbledon 2013</span></h1>
+  </header>
+  <!-- <section class="banner">
+    <img id="banner-image" src="images/wimbledon-header.jpg" alt="">
+  </section> -->
+  <nav>
+    <ul>
+      <li><a href="#">Player Statistics</a></li>
+        <li><a href="#">Player Gird</a></li>
+        <li><a href="#">Who played whom?</a></li>
+        <li><a href="#">Match Table</a></li>
+    </ul>
+  </nav>
+  <main>
+    <!-- <div class="sidebar">
+      <ul>
+        <li><a href="#">Player Statistics</a></li>
+        <li><a href="#">Player Gird</a></li>
+        <li><a href="#">Who played whom?</a></li>
+        <li><a href="#">Match Table</a></li>
+      </ul>
+    </div> -->
+    <!-- <div class="main-content"> -->
+      <canvas class="player-statistics"></canvas>
+    <!-- </div> -->
+  </main>
+  <script src="script.js"></script>
 </body>
+
 </html>
